# Spectra

./: .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
.claude/: settings.json
.github/scripts/: push_releases.py
.github/workflows/: ci.yml  push-releases.yml  update-wordpress.yml
src/spectra/: __init__.py  collection_builder.py  collection_parser.py  collection_store.py  detail_panel.py  endpoint_tree.py  har_import.py  history.py  main.py  main_frame.py  request_panel.py  response_panel.py  spec_loader.py  spec_manager_dialog.py  spec_parser.py  spec_store.py
tests/: conftest.py  test_collection_parser.py  test_har_import.py  test_history.py  test_request_panel.py  test_spec_loader.py  test_spec_parser.py  test_spec_store.py
